--- a/api-cotefe-net/templates/applications.html
+++ b/api-cotefe-net/templates/applications.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<img class="logo" src="/images/oauth2-logo.png" />
+<img class="logo" src="/pics/oauth2-logo.png" />
 
     <form method="post">
        <table>
