--- a/api-cotefe-net/templates/identities.html
+++ b/api-cotefe-net/templates/identities.html
@@ -37,7 +37,7 @@
 
 {% block content %}
 
-    <img class="logo" src="/images/openid-logo.png" />
+    <img class="logo" src="/pics/openid-logo.png" />
 
     <p><a class="janrainEngage button" href="#">Connect a new OpenID Identity</a></p>
    
