--- a/api-cotefe-net/templates/openid/new.html
+++ b/api-cotefe-net/templates/openid/new.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-    <img class="logo" src="/images/openid-logo.png" />
+    <img class="logo" src="/pics/openid-logo.png" />
     
     <p>Your provider is: <b>{{ provider }}</b></p>
     <p>Your identifier is: <b>{{ identifier }}</b></p>
