--- a/api-cotefe-net/templates/oauth2/auth.html
+++ b/api-cotefe-net/templates/oauth2/auth.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <img class="logo" src="/images/oauth2-logo.png" />
+    <img class="logo" src="/pics/oauth2-logo.png" />
     
     <p>Do you really want to grant {{ application.name }} access to your private information on COTEFE API?</p>
 
