BackBone view for dash-board implemented

--- a/web-cotefe-net/templates/tableModel.ejs
+++ b/web-cotefe-net/templates/tableModel.ejs
@@ -14,7 +14,7 @@
 					<tr>
 						<td><%= objects[i].name %></td>
 						
-						<td><%= objects[i].datetime_created %></td>
+						
 						
 						<td><a href="<%= objects[i].uri %>" class="edit"  >Edit</a></td>
 						<td><a href="<%= objects[i].uri %>" class="delete"  >Delete</a></td>
@@ -27,3 +27,5 @@
 		}
 	 %>    
 </table>
+
+<!--<td> objects[i].datetime_created</td>-->
