--- a/web-cotefe-net/templates/dashboardFrame.ejs
+++ b/web-cotefe-net/templates/dashboardFrame.ejs
@@ -25,63 +25,7 @@
 		<div class="page-width auto-margin content-dashboard">
 				
 			<div id="sidebar" >
-				<ul id="nav">
-					<li><a href="#" id="dashboard"><span>DashBoard</span></a>
-						<div class="sub-menu">
-							<ul class="sub-menu-nav">
-								<li><a href="../htmls/dashboard.html" id="homescreen"><span>Home Screen</span></a></li>
-								<li><a href="#" id="myaccount"><span>My Account</span></a></li>
-								<li><a href="#" id="settings"><span>Settings</span></a></li>
-								<li><a href="#" id="signout"><span>Sign Out</span></a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#" id="projects"><span>Projects</span></a>
-						<div class="sub-menu">
-							<ul class="sub-menu-nav">
-								<li><a href="../htmls/projectsnew.html" id="addP"><span>Add Project</span></a></li>
-								<li><a href="../htmls/projectslist.html" id="listP"><span>List Projects</span></a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#" id="experiments"><span>Experiments</span></a>
-						<div class="sub-menu">
-							<ul class="sub-menu-nav">
-								<li><a href="../htmls/experimentsnew.html" id="addE"><span>Add Experiment</span></a></li>
-								<li><a href="../htmls/experimentslist.html" id="listE"><span>List Experiments</span></a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#" id="jobs"><span>Jobs</span></a>
-						<div class="sub-menu">
-							<ul class="sub-menu-nav">
-								<li><a href="#" id="addJ"><span>Add Job</span></a></li>
-								<li><a href="#" id="listJ"><span>List Jobs</span></a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#" id="images"><span>Images</span></a>
-						<div class="sub-menu">
-							<ul class="sub-menu-nav">
-								<li><a href="../htmls/imagesnew.html" id="uploadIm"><span>Upload Image</span></a></li>
-								<li><a href="../htmls/imageslist.html" id="listIm"><span>List Images</span></a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#"><span>Tasks</span></a></li>
-					<li><a href="#" id="explore"><span>Explore</span></a>
-						<div class="sub-menu">
-							<ul class="sub-menu-nav">
-								<li><a href="../htmls/testbeds.html" id="testbeds"><span>TestBeds</span></a></li>
-								<li><a href="../htmls/platforms.html" id="platforms"><span>Platforms</span></a></li>
-								<li><a href="../htmls/sensors.html" id="sensors"><span>Sensors</span></a></li>
-								<li><a href="../htmls/actuators.html" id="actuators"><span>Actuators</span></a></li>
-								<li><a href="../htmls/interfaces.html" id="actuators"><span>Interfaces</span></a></li>
-							</ul>
-						</div>
-					</li>
-				</ul>
-				<br />
+				<!--left menu-->
 				
 			</div>
 
