experiment view done

--- a/web-cotefe-net/templates/experimentNew.ejs
+++ b/web-cotefe-net/templates/experimentNew.ejs
@@ -14,7 +14,7 @@
                                     <option value="">Choose a Project</option>
                                     <% if(projects != null){
                                     	for(i=0; i<projects.length; i++) { 
-                                    		items=JSON.parse(projects[i]);
+                                    		items=projects[i];
                                     		
                                     	%>
                                     	<option value="<%= items.id %> " <% 
