--- a/web-cotefe-net/templates/dashboardFrame.ejs
+++ b/web-cotefe-net/templates/dashboardFrame.ejs
@@ -1,3 +1,4 @@
+<div id="alert-wrapper"></div>
 <div class="head-wrapper">
 				<div id="header" class="page-width auto-margin">
 					<div id="logo">
