--- a/web-cotefe-net/templates/testbedsdetails.ejs
+++ b/web-cotefe-net/templates/testbedsdetails.ejs
@@ -1,23 +1,23 @@
-	Name:
-	<%= name %><br><br>
-	ID:
-	<%= id %><br><br>
-	URI:
-	<%= uri %><br><br>
-	Description:
-	<%= description %><br><br>
-	Organization:
-	<%= organization %><br><br>
-	Server URL:
-	<%= server_url %><br><br>
-	Nodes:
-	<%= nodes %><br><br>
-	Coordinates mapping function x:
-	<%= coordinates_mapping_function_x %><br><br>
-	Coordinates mapping function y:
-	<%= coordinates_mapping_function_y %><br><br>
-	Creation Date:
-	<%= datetime_created %><br><br>
-	Modification Date:<%= arr.datetime_modified %>
-					
+	<div>
+		Name:
+		<%= name %><br><br>
+		ID:
+		<%= id %><br><br>
+		URI:
+		<%= uri %><br><br>
+		Description:
+		<%= description %><br><br>
+		Organization:
+		<%= organization %><br><br>
+		Server URL:
+		<%= server_url %><br><br>
+		
+		Coordinates mapping function x:
+		<%= coordinates_mapping_function_x %><br><br>
+		Coordinates mapping function y:
+		<%= coordinates_mapping_function_y %><br><br>
+		Creation Date:
+		<%= datetime_created %><br><br>
+		Modification Date:<%= arr.datetime_modified %>
+	</div>				
 					
