--- a/web-cotefe-net/css/stylesheet.css
+++ b/web-cotefe-net/css/stylesheet.css
@@ -123,7 +123,9 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  { background: #fff;	bord
 .tab_content table tr td a{color:#DC7621;}
 .tab_content table tr td a:hover{text-decoration:underline;}
 
-.detaildiv table tr td{padding-top:20px;padding-bottom:20px;}
+/*.detaildiv table tr td{padding-top:20px;padding-bottom:20px;}*/
 #tablesubnav li a{width:200px;display:block;height:30px;color:#203B5C;}
 #tablesubnav li a:hover{background-color:#dc7621;background-image:url(../images/arrow.jpg);background-repeat:no-repeat;background-position: 185px 0px;color:#203B5C;}
 #tablesubnav li a span{margin-left:20px;line-height:30px;}
+
+#detail div table tr td{padding-top:5px;padding-bottom:5px;}
