--- a/web-cotefe-net/templates/platformsdetails.ejs
+++ b/web-cotefe-net/templates/platformsdetails.ejs
@@ -1,9 +1,33 @@
-Name:
-<%= name %><br><br>
-ID:
-<%= id %><br><br>
-URI:
-<%= uri %><br><br>
-Description:
-<%= description %><br><br>
-						
+<div class="wrap">	
+	<div id="list-tabs" style="padding-top:0px">						
+				<div class="tab_no_container" >
+				    <div id="tab_content" class="tab_content" >
+				     <table class="shadow-dark" >
+							<tr><th>Name</th><th>ID</th><th>URI</th><th>Description</th></tr>
+							<% if(objects!=null)
+								for(var i =0;i<objects.length;i++)
+								{
+							  %>
+									<tr>
+									<td><%= objects[i].name %></td>
+									
+									<td><%= objects[i].id %></td>
+									
+									<td><%= objects[i].uri %></td>
+									
+									<td><%= objects[i].description %></td>
+									</tr>
+							<%
+								}
+							%>
+						</table>		
+				    </div>
+				    
+				</div>
+		
+	</div>
+</div>
+
+
+
+				
