--- a/web-cotefe-net/templates/platformsdetails.ejs
+++ b/web-cotefe-net/templates/platformsdetails.ejs
@@ -1,4 +1,5 @@
-<div class="wrap">	
+<div class="wrap">
+<div class="headings"><h1><span>Platforms</span></h1></div>					
 	<div id="list-tabs" style="padding-top:0px">						
 				<div class="tab_no_container" >
 				    <div id="tab_content" class="tab_content" >
