--- a/web-cotefe-net/css/stylesheet.css
+++ b/web-cotefe-net/css/stylesheet.css
@@ -8,6 +8,7 @@ div,nav,#nav a span{display:block;}
 details summary {cursor:pointer;}
 details summary::-webkit-details-marker {display: none}
 details summary:before{border-radius: 5px; content: "+";color: #363636; display: block; float: left; font-size: 2em; font-weight: bold; margin: -2px 10px 0 10px; padding: 0; text-align: center; width: 35px;}
+details summary:focus{outline:none;}
 details[open] summary:before {content: "-";}
 
 
