--- a/web-cotefe-net/templates/projectList.ejs
+++ b/web-cotefe-net/templates/projectList.ejs
@@ -1,5 +1,5 @@
 <div class="wrap">	
-	<div class="headings"><h1><span>Current Projects</span></h1><a class="newIm"  href="<%= imlink %>"><img src="../images/add.png" alt="Add New Project"/></a></div>				
+	<div class="headings"><h1><span>Current <%= tableheader %></span></h1><a class="newIm"  href="<%= imlink %>"><img src="../images/add.png" alt="Add New Project"/></a></div>				
 	<div id="list-tabs" style="padding-top:0px">						
 				<div class="tab_no_container" >
 				    <div id="tab_content" class="tab_content" >
