--- a/web-cotefe-net/templates/dashboard.ejs
+++ b/web-cotefe-net/templates/dashboard.ejs
@@ -24,15 +24,7 @@
 								       Here comes Job List
 								    </div>
 								    <div id="tab4" class="tab_content">
-								       <table class="shadow-dark">
-								        	<tr><th>Title</th><th>Experiment</th><th>Date</th><th class="edit-delete-box">Edit</th><th class="edit-delete-box">Delete</th></tr>
-    										<tr><td>Image1</td><td>Exp1</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Image2</td><td>Exp2</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Image3</td><td>Exp3</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Image4</td><td>Exp4</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Image5</td><td>Exp5</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Image6</td><td>Exp6</td><td>Date</td><td>Edit</td><td>Delete</td></tr>								    
-								        </table>
+								       <%= imageTable %>
 								    </div>
 								</div>
 						
