--- a/web-cotefe-net/templates/imageUpload.ejs
+++ b/web-cotefe-net/templates/imageUpload.ejs
@@ -32,7 +32,7 @@
             <input class="button shadow-dark" style="width:200px;" name="generateLink" type="button" value="Generate Upload Link"/>
         </p>
 	</form>	
-	<form action="" id="uploadLink">
+	<div id="uploadLink">
 		
-	</form>
+	</div>
 </div>
