--- a/web-cotefe-net/templates/experimentres.ejs
+++ b/web-cotefe-net/templates/experimentres.ejs
@@ -65,7 +65,7 @@
 						                                    	  %>
 						                                    	
 						                            </select>
-						                        </p>
+						                        </p><!--
 						                        <div>
 						                            <span class="main-label">Sensor(s):</span>						                            
 						                            <table summary="sensors">						                           
@@ -93,7 +93,7 @@
 						                            </td><td><input type="checkbox" name="actuators" id="Position"><label for="Position">Position</label>
 						                            </td></tr>
 						                            </tbody></table>
-						                        </div>
+						                        </div>-->
 						                        <p>
 						                            <label for="nodes">No of Nodes: <input type="text" id="rangeValue1" class="input-small" name="nodes" value="0" style="width:100px"/></label>
 						                            <input id="slider1" name="nodes" type="range" min="0" max="200" value="0" onchange="printValue(this.value,'rangeValue1')">
@@ -137,7 +137,9 @@
 						                            <label for="description">VirtualNodeGroupent Description</label>
 						                            <textarea name="description" id="description" cols="60" rows="15" placeholder="VirtualNodegroup Description"></textarea>
 						                        </p>
-						                        
+						                        <p>
+						                        </p>
+						                        Nodes
 						                        
 						                        
 												 <p>
